fixes to color contrasting

--- a/app/scss/_custom.scss
+++ b/app/scss/_custom.scss
@@ -4,13 +4,20 @@ html {
 html > * {
     height: 100% !important;
 }
+
 .viewport {
-    width: 50%;
+    width: 90%;
     background: white;
-    margin: 120px auto;
+    margin: 30px auto;
     padding: 30px;
     height: min-content;
     min-height: 550px;
+
+    @include breakpoint(large) {
+        width: 66%;
+        max-width: 900px;
+        margin: 120px auto;
+    }
 
     .viewport--inner {
         height: auto;
@@ -23,6 +30,23 @@ html > * {
     background-color: gray;
     width: 100%;
     height: 100%;
+}
+.color-block {
+    width: 150px;
+    height: 150px;
+    padding: 10px;
+
+    @include breakpoint(medium) {
+        width: 200px;
+        height: 200px;
+    }
+
+    p {
+        background: inherit;
+        background-clip: text;
+        color: transparent;
+        filter: invert(1) grayscale(1) contrast(9);
+    }
 }
 .anim-header {
     text-align: center;
